# Counter_Risk

./: .coverage.runnervmnay03.pid5805.XQ6K8i8x.HIUQ70HoAQsh  .coverage.runnervmnay03.pid5808.Xif2iyox.HxFiMg0sjQ2h  .coverage.runnervmnay03.pid5811.XIBGM8Kx.HQsfEMlJuHGh  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Issues.txt  Makefile  README.md  Runner.xlsm  WINDOWS_TEST_BRIEF.md  WORKFLOW_USER_GUIDE.md  claude-output-170.md  claude-prompt-164.md  claude-prompt-170.md  codex-prompt-223.md  codex-prompt-242.md  codex-prompt-269.md  codex-prompt-274.md  codex-prompt-574.md  codex-prompt-62.md  codex-prompt-654.md  codex-prompt-660.md  codex-prompt-90.md  coverage.json  langsmith-fleet-worker-attempt.json  pyinstaller_runtime_hook.py  pyproject.toml  pytest-junit.xml  release.spec  requirements.txt  run_counter_risk_gui.cmd  sitecustomize.py  workloop-state.md
.agents/: issue-10-ledger.yml  issue-101-ledger.yml  issue-103-ledger.yml  issue-106-ledger.yml  issue-11-ledger.yml  issue-110-ledger.yml  issue-112-ledger.yml  issue-114-ledger.yml  issue-12-ledger.yml  issue-127-ledger.yml  issue-129-ledger.yml  issue-13-ledger.yml  issue-14-ledger.yml  issue-15-ledger.yml  issue-16-ledger.yml  issue-17-ledger.yml  issue-18-ledger.yml  issue-19-ledger.yml  issue-190-ledger.yml  issue-20-ledger.yml  issue-21-ledger.yml  issue-219-ledger.yml  issue-22-ledger.yml  issue-221-ledger.yml  issue-222-ledger.yml  issue-227-ledger.yml  issue-23-ledger.yml  issue-230-ledger.yml  issue-233-ledger.yml  issue-24-ledger.yml  issue-240-ledger.yml  issue-241-ledger.yml  issue-26-ledger.yml  issue-27-ledger.yml  issue-28-ledger.yml  issue-31-ledger.yml  issue-32-ledger.yml  issue-33-ledger.yml  issue-36-ledger.yml  issue-37-ledger.yml  (+20 more)
.github/scripts/: agents_pr_meta_keepalive.js  keepalive_loop.js  keepalive_worker_gate.js
.github/workflows/: agents-81-gate-followups.yml  agents-auto-pilot.yml  agents-keepalive-loop.yml  autofix-versions.env  ci.yml  debug-keepalive-auth.yml  demo-artifact.yml  dependabot-automerge.yml  maint-76-claude-code-review.yml  maint-dependabot-auto-lock.yml  pr-00-gate.yml  release-e2e.yml  release.yml
agents/: autofix_ci_diagnostic_2026-02-14.md  autofix_pr104_run22035056418.md  autofix_pr104_run22035596071.md  autofix_pr104_run22035791589.md  autofix_pr104_run22036058238.md  autofix_pr104_run22036318689.md  autofix_pr104_run22037031098.md  autofix_pr104_run22037137080.md  autofix_pr104_run22037825891.md  autofix_pr104_run22038530100.md  autofix_pr104_run22038601126.md  autofix_pr104_run22039423897.md  autofix_pr104_run22040244591.md  autofix_pr104_run22041647007.md  autofix_pr128_run22034485619.md  autofix_pr128_run22034549979.md  autofix_pr128_run22034661086.md  autofix_pr526_run25501486299.md  autofix_pr526_run25502822675.md  autofix_pr526_run25504881317.md  autofix_pr526_run25504881317_followup_2026-05-24.md  autofix_pr583_run25696502853.md  autofix_pr627_run26337640976.md  autofix_pr63_run21998931191.md  autofix_pr63_run21999055864.md  claude-217.md  claude-29.md  claude-38.md  claude-39.md  codex-236.md  codex-239.md  codex-30.md  codex-35.md  codex-6.md  codex-95.md  codex-97.md
assets/templates/: counter_risk_template.xlsm
assets/vba/: RunnerLaunch.bas
config/: all_programs.yml  ex_trend.yml  fixture_replay.yml  limits.yml  name_registry.yml  trend.yml
docs/: RELEASE_CHECKLIST.md  RELEASE_WORKFLOW_SETUP.md  baseline-kit-dependency.md  chat_logging.md  concentration_metrics.md  data_quality.md  gui_runner.md  langsmith_fleet.md  limit_monitoring.md  macro_spec.md  name_registry.md  operator_ux_decision.md  release.yml.draft  remote_trigger_testing.md  risk_proxy_outputs.md  runner_xlsm_macro_manual_verification.md  runner_xlsm_month_selector_decision.md  runner_xlsm_workbook_scope.md  windows_operator_runbook.md
docs/Ratings Instructiosns/: Counterparty Risk Report Procedures - Current.docx
docs/audit/: 10-calc-core.md  10-io-config.md  10-outputs.md  10-parsers.md  10-pipeline.md  10-ui.md  20-functionality-wiring.md  21-duplication.md  22-design-ux.md  23-windows-readiness.md  AUDIT_REPORT.md  IMPLEMENTATION_SUMMARY.md  REMAINING_WORK.md  _codex_lane_tests.txt  _test_run.txt
docs/ci/: 2026-02-15-gate-ci-runtime-py311.md  2026-02-21-gate-run-22253907143-autofix.md
docs/keepalive/: GoalsAndPlumbing.md
docs/reports/: baseline-coverage.md
docs/ux-review/: REVIEW_LOG.md
runs/2025-12-31/: DATA_QUALITY_SUMMARY.txt  change_attribution.md  ex_trend-mosers-input.xlsx  manifest.json
runs/2025-12-31_1/: all_programs-mosers-input.xlsx  change_attribution.csv  (+3 more)
scripts/: __init__.py  build_runner_workbook.py  extract_vba_modules.py  sync_dev_dependencies.py  sync_test_dependencies.py  sync_tool_versions.py  validate_dependency_test_setup.py  validate_release_bundle.sh  validate_release_workflow_yaml.py  verify_release_workflow_dispatch.sh
tests/: __init__.py  conftest.py  mosers_reference_outputs.py  test_build_xlsm.py  test_change_attribution_report.py  test_chat_context.py  test_chat_provider_clients.py  test_chat_session.py  test_chat_ui.py  test_cli.py  test_com_cleanup.py  test_config.py  test_counter_risk_cli.py  test_counter_risk_logging.py  test_coverage_policy.py  test_dates.py  test_dependency_version_alignment.py  test_dropin_template_openpyxl_absence.py  test_dropin_templates.py  test_excel_asserts.py  test_excel_range_compare.py  test_extract_vba_modules.py  test_fixture_replay_config.py  test_fixture_replay_numeric_outputs.py  test_fixtures_smoke.py  test_followup_issue_generator_checklist_placeholders.py  test_formatting.py  test_futures_delta.py  test_gui_runner.py  test_historical_update.py  test_historical_workbook_validation.py  test_imports.py  test_io_discover.py  test_issue_formatter_checklist_placeholders.py  test_issue_optimizer_checklist_placeholders.py  test_langchain_runtime.py  test_limit_monitoring_docs.py  test_limits_config.py  test_macro_spec_parity.py  test_manifest_paths.py  (+58 more)
tools/: __init__.py  coverage_guard.py  langchain_client.py  requirements-llm.txt  resolve_mypy_pin.py
web/: index.html
(+238 files in other folders)
