[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-project"
version = "0.1.0"
description = "Template Python project with stranske/Workflows CI integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.7,<3",
    "PyYAML>=6.0.2,<7",
    "python-pptx==1.0.2",
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
app = []
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    "pandas>=2.2,<3",
    "black==24.10.0",
    "ruff==0.15.1",
    "mypy==1.19.1",
    # Required by scripts/sync_test_dependencies.py when --fix is needed in CI
    "tomlkit>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/stranske/Template"
Repository = "https://github.com/stranske/Template"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "release: slow release/packaging tests (PyInstaller build + packaged executable)",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = "${COVERAGE_FAIL_UNDER-0}"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["counter_risk", "my_project", "tools"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "counter_risk.config"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "counter_risk.parsers.cprs_ch"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "counter_risk.integrations.powerpoint_com"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "counter_risk.mosers.workbook_generation"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tools.*"
ignore_errors = true

[tool.black]
line-length = 100
extend-exclude = '''
/(
  \.venv
  | node_modules
  | \.workflows-lib
)/
'''
